Test coverage and docs

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,6 +1,6 @@
-{{link-to 'Go to First' 'index' (query-params anchor='first')}}
-{{link-to 'Go to Second' 'index' (query-params anchor='second')}}
-{{link-to 'Go to Third' 'index' (query-params anchor='third')}}
+{{link-to 'Go to First' 'index' (query-params anchor='first') class='first-link'}}
+{{link-to 'Go to Second' 'index' (query-params anchor='second') class='second-link'}}
+{{link-to 'Go to Third' 'index' (query-params anchor='third') class='third-link'}}
 
 <h5 data-anchor='first'>First</h5>
 
