Remove dependency on ember-legacy-views, update ember-cli

--- a/tests/dummy/app/templates/customized.hbs
+++ b/tests/dummy/app/templates/customized.hbs
@@ -1,3 +1,4 @@
+{{customized-page a=custom}}
 {{link-to 'Go to First' 'customized' (query-params custom='first') class='first-link'}}
 {{link-to 'Go to Second' 'customized' (query-params custom='second') class='second-link'}}
 {{link-to 'Go to Third' 'customized' (query-params custom='third') class='third-link'}}
