Package with turnkey component

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{index-page a=anc}}
+{{ember-anchor a=anc}}
 {{link-to 'Go to First' 'index' (query-params anc='first') class='first-link'}}
 {{link-to 'Go to Second' 'index' (query-params anc='second') class='second-link'}}
 {{link-to 'Go to Third' 'index' (query-params anc='third') class='third-link'}}
