fix: address hbs lint errors

--- a/tests/dummy/app/templates/customized.hbs
+++ b/tests/dummy/app/templates/customized.hbs
@@ -1,9 +1,24 @@
 {{customized-page a=custom}}
-{{link-to 'Go to First' 'customized' (query-params custom='first') class='first-link'}}
-{{link-to 'Go to Second' 'customized' (query-params custom='second') class='second-link'}}
-{{link-to 'Go to Third' 'customized' (query-params custom='third') class='third-link'}}
+{{link-to
+  "Go to First" 
+  "customized"
+  (query-params custom="first")
+  class="first-link"
+}}
+{{link-to
+  "Go to Second" 
+  "customized"
+  (query-params custom="second")
+  class="second-link"
+}}
+{{link-to
+  "Go to Third" 
+  "customized"
+  (query-params custom="third")
+  class="third-link"
+}}
 
-<h5 data-custom='first'>First</h5>
+<h5 data-custom="first">First</h5>
 
 Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
 
@@ -15,7 +30,7 @@ Hamburger boudin capicola jowl meatball, ball tip sirloin strip steak. Kielbasa 
 
 Bacon sirloin ball tip boudin venison, jowl swine shoulder salami pork chop hamburger turducken tongue pork. Turkey cow t-bone tenderloin jowl filet mignon turducken, salami pastrami capicola porchetta tri-tip biltong spare ribs pork loin. Shank andouille landjaeger ham hock tail pork belly brisket boudin bresaola flank ground round. Bresaola frankfurter porchetta pork chop capicola leberkas. Frankfurter shank pastrami bresaola kevin venison pork. Tongue brisket tenderloin chuck flank bacon beef meatloaf. Biltong pork loin turducken meatloaf ribeye bresaola tail short loin shank tongue swine.
 
-<h5 data-custom='second'>Second</h5>
+<h5 data-custom="second">Second</h5>
 
 Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
 
@@ -27,7 +42,7 @@ Hamburger boudin capicola jowl meatball, ball tip sirloin strip steak. Kielbasa 
 
 Bacon sirloin ball tip boudin venison, jowl swine shoulder salami pork chop hamburger turducken tongue pork. Turkey cow t-bone tenderloin jowl filet mignon turducken, salami pastrami capicola porchetta tri-tip biltong spare ribs pork loin. Shank andouille landjaeger ham hock tail pork belly brisket boudin bresaola flank ground round. Bresaola frankfurter porchetta pork chop capicola leberkas. Frankfurter shank pastrami bresaola kevin venison pork. Tongue brisket tenderloin chuck flank bacon beef meatloaf. Biltong pork loin turducken meatloaf ribeye bresaola tail short loin shank tongue swine.
 
-<h5 data-custom='third'>Third</h5>
+<h5 data-custom="third">Third</h5>
 
 Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
 
