--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,21 +1,16 @@
 {{ember-anchor a=anc}}
-{{link-to 'Go to First' 'index' (query-params anc='first') class='first-link'}}
-{{link-to 'Go to Second' 'index' (query-params anc='second') class='second-link'}}
-{{link-to 'Go to Third' 'index' (query-params anc='third') class='third-link'}}
+{{link-to "Go to First" "index" (query-params anc="first") class="first-link"}}
+{{link-to
+  "Go to Second"
+  "index"
+  (query-params anc="second")
+  class="second-link"
+}}
+{{link-to "Go to Third" "index" (query-params anc="third") class="third-link"}}
 
-<h5 data-anc='first'>First</h5>
-
-Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
-
-Spare ribs short ribs tongue, tenderloin kevin meatloaf venison prosciutto. Pork chop sausage beef ribs pancetta pastrami, short ribs swine shoulder. Pork belly chuck fatback pork, salami pastrami hamburger capicola biltong turducken tail frankfurter jerky prosciutto ham. Frankfurter salami ham tail shankle jerky ribeye corned beef rump.
-
-Biltong jowl tenderloin swine, ball tip brisket alcatra. Swine ribeye boudin shankle. Drumstick tenderloin alcatra tongue turducken jowl hamburger chicken t-bone capicola pork loin shank. Spare ribs andouille corned beef drumstick turducken pig shoulder tail bacon pork loin. Pork alcatra porchetta, bresaola meatball short ribs ham turkey shoulder cow beef ribs pancetta leberkas.
-
-Hamburger boudin capicola jowl meatball, ball tip sirloin strip steak. Kielbasa capicola leberkas jerky sirloin short ribs salami pork loin. Alcatra fatback venison bresaola tri-tip turducken. Pork chop cow brisket, pork belly ground round boudin landjaeger. Leberkas short ribs flank doner boudin pork landjaeger tri-tip jowl ham bacon shank chicken pork chop venison. Jerky pork chop filet mignon, rump biltong sausage kielbasa chuck boudin andouille salami corned beef meatball.
-
-Bacon sirloin ball tip boudin venison, jowl swine shoulder salami pork chop hamburger turducken tongue pork. Turkey cow t-bone tenderloin jowl filet mignon turducken, salami pastrami capicola porchetta tri-tip biltong spare ribs pork loin. Shank andouille landjaeger ham hock tail pork belly brisket boudin bresaola flank ground round. Bresaola frankfurter porchetta pork chop capicola leberkas. Frankfurter shank pastrami bresaola kevin venison pork. Tongue brisket tenderloin chuck flank bacon beef meatloaf. Biltong pork loin turducken meatloaf ribeye bresaola tail short loin shank tongue swine.
-
-<h5 data-anc='second'>Second</h5>
+<h5 data-anc="first">
+  First
+</h5>
 
 Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
 
@@ -27,7 +22,23 @@ Hamburger boudin capicola jowl meatball, ball tip sirloin strip steak. Kielbasa 
 
 Bacon sirloin ball tip boudin venison, jowl swine shoulder salami pork chop hamburger turducken tongue pork. Turkey cow t-bone tenderloin jowl filet mignon turducken, salami pastrami capicola porchetta tri-tip biltong spare ribs pork loin. Shank andouille landjaeger ham hock tail pork belly brisket boudin bresaola flank ground round. Bresaola frankfurter porchetta pork chop capicola leberkas. Frankfurter shank pastrami bresaola kevin venison pork. Tongue brisket tenderloin chuck flank bacon beef meatloaf. Biltong pork loin turducken meatloaf ribeye bresaola tail short loin shank tongue swine.
 
-<h5 data-anc='third'>Third</h5>
+<h5 data-anc="second">
+  Second
+</h5>
+
+Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
+
+Spare ribs short ribs tongue, tenderloin kevin meatloaf venison prosciutto. Pork chop sausage beef ribs pancetta pastrami, short ribs swine shoulder. Pork belly chuck fatback pork, salami pastrami hamburger capicola biltong turducken tail frankfurter jerky prosciutto ham. Frankfurter salami ham tail shankle jerky ribeye corned beef rump.
+
+Biltong jowl tenderloin swine, ball tip brisket alcatra. Swine ribeye boudin shankle. Drumstick tenderloin alcatra tongue turducken jowl hamburger chicken t-bone capicola pork loin shank. Spare ribs andouille corned beef drumstick turducken pig shoulder tail bacon pork loin. Pork alcatra porchetta, bresaola meatball short ribs ham turkey shoulder cow beef ribs pancetta leberkas.
+
+Hamburger boudin capicola jowl meatball, ball tip sirloin strip steak. Kielbasa capicola leberkas jerky sirloin short ribs salami pork loin. Alcatra fatback venison bresaola tri-tip turducken. Pork chop cow brisket, pork belly ground round boudin landjaeger. Leberkas short ribs flank doner boudin pork landjaeger tri-tip jowl ham bacon shank chicken pork chop venison. Jerky pork chop filet mignon, rump biltong sausage kielbasa chuck boudin andouille salami corned beef meatball.
+
+Bacon sirloin ball tip boudin venison, jowl swine shoulder salami pork chop hamburger turducken tongue pork. Turkey cow t-bone tenderloin jowl filet mignon turducken, salami pastrami capicola porchetta tri-tip biltong spare ribs pork loin. Shank andouille landjaeger ham hock tail pork belly brisket boudin bresaola flank ground round. Bresaola frankfurter porchetta pork chop capicola leberkas. Frankfurter shank pastrami bresaola kevin venison pork. Tongue brisket tenderloin chuck flank bacon beef meatloaf. Biltong pork loin turducken meatloaf ribeye bresaola tail short loin shank tongue swine.
+
+<h5 data-anc="third">
+  Third
+</h5>
 
 Bacon ipsum dolor amet tri-tip turkey doner meatloaf sirloin cupim pork belly shankle short ribs fatback t-bone meatball flank. Bacon turducken meatloaf, kielbasa hamburger tri-tip doner ham pig filet mignon. Pork chop jerky capicola salami jowl, cupim alcatra beef ball tip. Shankle brisket sirloin doner. Pancetta t-bone sausage, brisket bacon sirloin pork chop swine meatball alcatra boudin andouille pork. Porchetta turducken strip steak, pork loin kevin kielbasa ribeye cow pancetta.
 
